<resources>
    <string name="app_name">Zegal</string>
    <string name="app_name_main">ZEGAL</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="title_activity_registro">¿No tienes cuenta? Registrate</string>
    <string name="txt_principal">Contratos inteligentes en el poder de tus manos.</string>
    <string name="input_error_name">Campo nombre completo es requerido</string>
    <string name="input_error_email">Campo email es requerido</string>
    <string name="input_error_password">Campo contraseña es requerido</string>
    <string name="input_error_phone">Campo teléfono es requerido</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">Ingresa un número válido</string>
    <string name="registration_success">Registro Exitoso</string>
    <string name="registration_fail">Registro Fallído</string>

    <string name="input_error_email_invalid">Ingresa un email válido</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este email no es válido</string>
    <string name="error_invalid_password">Contraseña es muy débil</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings activities flujo registro-->
    <string name="txt_bienvenida_reg">Registrate Ahora</string>
    <string name="btn_reg_one">Enviar</string>

    <!-- TXT Tipos de contrato-->
    <string name="CTR_1">Licencia de software</string>
    <string name="CTR_2">Laboral</string>
    <string name="CTR_3">Servicios
    </string>
    <string name="CTR_4">Alianzas</string>
    <string name="CTR_5">Cerrar Sesión</string>
    <string name="TXT_CTR">¿Qué contrato necesitas?</string>

    <!-- TXT Registro-->
    <string name="full_name">Nombre completo</string>
    <string name="tel">Ingresa tu número celular</string>
    <string name="cuenta_Act">¿Ya tienes cuenta? Ingresa</string>
    <string name="dt_one">¿Sin cuenta?</string>
    <string name="dt_two">Mejor tarde que nunca.</string>
    <!-- TXT Ingresar-->
    <string name="I_Bienvenida">Feliz por verte otra vez</string>


    <!--TXT Alert terminos y condiciones-->
    <string name="Tit">Términos, condiciones y Aviso de privacidad</string>
    <string name="sub1">Al presionar el botón finalizar, acepta los Términos y condiciones y el Aviso de privacidad</string>

    <!--TXT Ayuda com la aplicación-->
    <string name="tit1">Servicios</string>
    <string name="desc1">Con esta aplicación, reducirá los tiempos de trámite al contratar algún servicio.</string>

    <string name="tit2">Licencia de Software</string>
    <string name="desc2">Próximamente</string>

    <string name="tit3">Laboral</string>
    <string name="desc3">Próximamente</string>

    <string name="tit4">Alianzas</string>
    <string name="desc4">Próximamente</string>

    <string name="omite">Omitir</string>

    <string name="my_prefer">"zegal.ganlen.MyPref"</string>
    <string name="my_prefer_key">"zegal.ganlen.MyPrefKey"</string>
    <!-- Strings Contrato servicios-->
    <string name="txt_general">Contrato de prestación de servicios.</string>
    <string name="cmp_informacion">Completa la siguiente información para generar el contrato.</string>
    <string name="txt_recibe">Nombre de la persona que recibe el servicio.</string>
    <string name="txt_presta">Nombre de la persona que presta el servicio</string>
    <string name="txt_finalidad">Finalidad del contrato</string>
    <string name="txt_monto">Monto a pagar al prestador.</string>
    <string name="txt_parcial">¿En cuántos pagos se liquidará el servicio?.</string>
    <string name="txt_facil">Facilidad de pago.</string>
    <string name="txt_fechas">Fecha de pago.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    <!-- Strings Contrato servicios-->
    <string name="btn_terminar">Siguiente</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_return">Regresar</string>
    <string name="btn_terminar1">Finalizar</string>

    <!-- Strings Identificaciones-->

    <string name="txt_recibe2">Identificaciones de la persona que recibe el servicio.</string>
    <string name="txt_presta2">Identificaciones de la persona que presta el servicio</string>
    <string name="agregarfoto">Escanear identificación</string>
    <string name="btn_conf">Confirmar Solicitud</string>
    <string name="btn_contrato">Generar contrato</string>
    <string name="btn_firma">Introduzca su firma electónica</string>

    <!-- Strings forma pago o confirmación de compra-->
    <string name="conf">Gracias por contar con Zegal. En un plazo de 12 horas recibiras tu contrato</string>
    <string name="boton">MENÚ PRINCIPAL</string>

</resources>
