<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradient_azul"
    tools:context=".Contrato_Servicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        >

        <LinearLayout
            android:id="@+id/main_contratos_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/blanco"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingEnd="26dip"
            android:paddingStart="30dip"
            android:visibility="visible">



            <TextView
                android:id="@+id/tv_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_principal"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tc_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cmp_informacion"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_recibe"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_persona_recibe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textPersonName" />

            <TextView
                android:id="@+id/tv_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_presta"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_persona_presta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_finalidad"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_finalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/tv_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_monto"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="$0.00"/>

            <TextView
                android:id="@+id/tv_nine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_parcial"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/sp_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_parcial"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_pagos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_fechas"
                android:textColor="@android:color/black" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_enviar_main_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="Continuar"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>